create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2648,7 +2648,7 @@ section.lazy-placeholder:after {
 .cid-s4lqAHBO5Y {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-color: #004150;
+  background-color: #0085a2;
 }
 @media (max-width: 767px) {
   .cid-s4lqAHBO5Y .content {
@@ -2714,7 +2714,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s4lqAHBO5Y P {
-  color: #0085a2;
+  color: #ffffff;
 }
 .cid-s4lqAHBO5Y .copyright > p {
   color: #ffffff;
