create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -721,6 +721,37 @@ section.lazy-placeholder:after {
 .cid-s4lwBNSf8F H2 {
   color: #0085a2;
 }
+.cid-s7xlb2ssYF {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/hintergrund-1671x381.png");
+}
+.cid-s7xlb2ssYF h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-s7xlb2ssYF p {
+  color: #767676;
+  text-align: left;
+}
+.cid-s7xlb2ssYF .card-box {
+  padding-top: 2rem;
+}
+.cid-s7xlb2ssYF .card-wrapper {
+  height: 100%;
+}
+.cid-s7xlb2ssYF .card-title DIV {
+  text-align: center;
+}
+.cid-s7xlb2ssYF .card-title {
+  text-align: center;
+  color: #004150;
+}
+.cid-s7xlb2ssYF P {
+  text-align: center;
+  color: #004150;
+}
 .cid-s4TZzQ1OFR {
   padding-top: 0px;
   padding-bottom: 0px;
