--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -972,6 +972,7 @@ section.lazy-placeholder:after {
 }
 .cid-s4lnRWrCd0 P {
   color: #ffffff;
+  text-align: left;
 }
 .cid-s4lnRWrCd0 .copyright > p {
   color: #ffffff;
